--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
 
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Frontend Mentor | Product preview card component</title>
 
     <style>
@@ -19,21 +20,29 @@
     </style>
 </head>
 <body>
-    Preview
+    <main>
+        <picture>
+            <source srcset="./images/image-product-desktop.jpg" media="(min-width: 900px)">
+            <img src="./images/image-product-mobile.jpg" alt="perfume bottle">
+        </picture>
 
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://www.frontendmentor.io/profile/cdevnev" target="_blank">Chase</a>.
-  </div>
+        <section>
+            <h1>Perfume</h1>
+            <h2>Gabrielle Essence Eau De Parfum</h2>
+            <p class="productDesc">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+            <div class="pricing">
+                <p class="current">$149.99</p>
+                <p class="previous">$169.99</p>
+            </div>    
+            <button>Add to Cart</button>
+        </section>
+    </main>
+    
+    <footer>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="https://www.frontendmentor.io/profile/cdevnev" target="_blank">Chase</a>.
+        </div>
+    </footer>
 </body>
 </html>
