--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     </style>
 </head>
 <body>
-    <main>
+    <main class="flex-column">
         <picture>
             <source srcset="./images/image-product-desktop.jpg" media="(min-width: 900px)">
             <img src="./images/image-product-mobile.jpg" alt="perfume bottle">
         </picture>
 
-        <section>
+        <section class="flex flex-column">
             <h1>Perfume</h1>
             <h2>Gabrielle Essence Eau De Parfum</h2>
             <p class="productDesc">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
-            <div class="pricing">
+            <div class="pricing flex flex-row">
                 <p class="current">$149.99</p>
                 <p class="previous">$169.99</p>
             </div>    
