Added text and color utility classes

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         </picture>
 
         <section class="flex flex-column">
-            <h1>Perfume</h1>
-            <h2>Gabrielle Essence Eau De Parfum</h2>
-            <p class="productDesc">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+            <h1 class="main-color main-text">Perfume</h1>
+            <h2 class="accent-text">Gabrielle Essence Eau De Parfum</h2>
+            <p class="productDesc main-color main-text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
             <div class="pricing flex flex-row">
-                <p class="current">$149.99</p>
-                <p class="previous">$169.99</p>
+                <p class="current accent-text">$149.99</p>
+                <p class="previous main-color main-text">$169.99</p>
             </div>    
-            <button>Add to Cart</button>
+            <button class="main-text">Add to Cart</button>
         </section>
     </main>
     
